--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
   font-size: 18px;
   line-height: 150%;
   color: #777777;
-  background: #4aaaa5;
+  background-image: url("subtle_white_mini_waves.png");
 }
 
 header {
