--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ body {
   font-size: 18px;
   line-height: 150%;
   color: #777777;
-  background-image: url("subtle_white_mini_waves.png");
+  background-image: url("http://img.freepik.com/free-photo/white-wall_1194-5956.jpg?size=338&ext=jpg");
 }
 
 header {
